Fixing checkboxes and radios to look good on IOS

--- a/components/inputs/inputs.css
+++ b/components/inputs/inputs.css
@@ -110,6 +110,11 @@
   visibility: visible;
 }
 
+/* Search */
+.ampstart-input > input[type="search"] {
+  appearance: none;
+}
+
 
 /* Range */
 .ampstart-input > input[type="range"] + label::after {
@@ -140,9 +145,17 @@
 .ampstart-input input[type="checkbox"],
 .ampstart-input input[type="radio"] {
   margin-top: 0;
-  width: auto;
-  position: absolute;
-  visibility: hidden;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 1px solid var(--color-primary);
+  vertical-align: middle;
+  margin-right: var(--space-1);
+  text-align: center;
+}
+
+.ampstart-input input[type="radio"] {
+  border-radius: 20px;
 }
 
 .ampstart-input input[type="checkbox"] + label,
@@ -152,45 +165,45 @@
   vertical-align: middle;
 }
 
+
 .ampstart-input input[type="checkbox"] + label::after,
 .ampstart-input input[type="radio"] + label::after {
   display: none;
 }
 
-/* Custom checkmark */
-.ampstart-input input[type="checkbox"] + label::before {
-  display: inline-block;
+
+/* Custom checkmark/disc */
+.ampstart-input input[type="checkbox"]::after,
+.ampstart-input input[type="radio"]::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right : 0;
   content: " ";
-  width: 14px;
-  height: 14px;
-  border: 1px solid var(--color-primary);
+  line-height: 1.4rem;
   vertical-align: middle;
-  margin-right: var(--space-1);
   text-align: center;
+  background-color: var(--color-secondary);
 }
 
-.ampstart-input input[type="checkbox"]:checked + label::before {
-  content: "✔";
+.ampstart-input input[type="checkbox"]:checked::after {
   background-color: var(--color-primary);
   color: var(--color-font-primary);
 }
 
-/* Custom radio */
-.ampstart-input input[type="radio"] + label::before {
-  display: inline-block;
-  content: " ";
-  width: 14px;
-  height: 14px;
-  border: 1px solid var(--color-primary);
-  border-radius: 14px;
-  vertical-align: middle;
-  margin-right: var(--space-1);
-  text-align: center;
+.ampstart-input input[type="checkbox"]:checked::after {
+  content: "✓";
 }
 
-.ampstart-input input[type="radio"]:checked + label::before {
+/* Custom radio */
+.ampstart-input input[type="radio"]::after {
+  border-radius: 18px;
+}
+
+.ampstart-input input[type="radio"]:checked::after {
   content: "•";
-  font-size: var(--h2);
+  font-size: var(--h1);
   background-color: var(--color-secondary);
   color: var(--color-font-secondary);
 }
